overflow-x fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@ body {
   font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: normal;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
